--- a/css.css
+++ b/css.css
@@ -1,3 +1,6 @@
 html {
   filter: invert(1) hue-rotate(180deg);
 }
+img, div[style^="background-image:"] {
+  filter: invert(1) hue-rotate(180deg);
+}
